--- a/AutoMall/ViewControllers/Mall/MetodPaymentVC.xib
+++ b/AutoMall/ViewControllers/Mall/MetodPaymentVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -414,11 +414,12 @@
                     </variation>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YwP-U2-Hck">
-                    <rect key="frame" x="8" y="563" width="359" height="44"/>
+                    <rect key="frame" x="0.0" y="618" width="375" height="49"/>
                     <color key="backgroundColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="44" id="XZL-R7-GAW"/>
+                        <constraint firstAttribute="height" constant="49" id="XZL-R7-GAW"/>
                     </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <state key="normal" title="确认支付">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
@@ -433,10 +434,10 @@
             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <constraints>
                 <constraint firstItem="CXx-lJ-d7U" firstAttribute="top" secondItem="Tlh-8E-Au7" secondAttribute="bottom" constant="10" id="2pe-fF-YYp"/>
-                <constraint firstItem="YwP-U2-Hck" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="Gdh-Xv-gEQ"/>
-                <constraint firstAttribute="bottom" secondItem="YwP-U2-Hck" secondAttribute="bottom" constant="60" id="VoV-on-uZr"/>
+                <constraint firstItem="YwP-U2-Hck" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Gdh-Xv-gEQ"/>
+                <constraint firstAttribute="bottom" secondItem="YwP-U2-Hck" secondAttribute="bottom" id="VoV-on-uZr"/>
                 <constraint firstItem="Tlh-8E-Au7" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="a6e-EX-QK6"/>
-                <constraint firstAttribute="trailing" secondItem="YwP-U2-Hck" secondAttribute="trailing" constant="8" id="cXl-ni-BB4"/>
+                <constraint firstAttribute="trailing" secondItem="YwP-U2-Hck" secondAttribute="trailing" id="cXl-ni-BB4"/>
                 <constraint firstItem="CXx-lJ-d7U" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="dok-Gl-DnV"/>
                 <constraint firstAttribute="trailing" secondItem="CXx-lJ-d7U" secondAttribute="trailing" id="f9k-FU-jRY"/>
                 <constraint firstItem="Tlh-8E-Au7" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="34" id="m5l-17-91n">
