--- a/AutoMall/ViewControllers/PersonalCenter/CenterOrderCell.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/CenterOrderCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,69 +13,69 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="centerOrderCell" rowHeight="80" id="KGk-i7-Jjw" customClass="CenterOrderCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="centerOrderCell" rowHeight="70" id="KGk-i7-Jjw" customClass="CenterOrderCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UNW-A2-61t">
-                        <rect key="frame" x="8" y="6" width="68" height="68"/>
+                        <rect key="frame" x="8" y="1" width="68" height="68"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="UNW-A2-61t" secondAttribute="height" multiplier="1:1" id="eHg-0f-UGr"/>
                         </constraints>
-                        <inset key="imageEdgeInsets" minX="14" minY="0.0" maxX="12" maxY="20"/>
+                        <inset key="imageEdgeInsets" minX="18" minY="5" maxX="16" maxY="24"/>
                         <state key="normal" image="center_inProgress">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKC-Eb-3FB">
-                        <rect key="frame" x="81" y="6" width="67.5" height="68"/>
-                        <inset key="imageEdgeInsets" minX="15" minY="0.0" maxX="12" maxY="24"/>
+                        <rect key="frame" x="81" y="1" width="67.5" height="68"/>
+                        <inset key="imageEdgeInsets" minX="18" minY="5" maxX="16" maxY="28"/>
                         <state key="normal" image="center_servicesConfirmed"/>
                     </button>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9J8-aO-BSg">
-                        <rect key="frame" x="153.5" y="6" width="68" height="68"/>
-                        <inset key="imageEdgeInsets" minX="13" minY="0.0" maxX="13" maxY="24"/>
+                        <rect key="frame" x="153.5" y="1" width="68" height="68"/>
+                        <inset key="imageEdgeInsets" minX="18" minY="5" maxX="18" maxY="28"/>
                         <state key="normal" image="center_workDone"/>
                     </button>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J3B-IZ-ood">
-                        <rect key="frame" x="226.5" y="6" width="67.5" height="68"/>
-                        <inset key="imageEdgeInsets" minX="15" minY="0.0" maxX="15" maxY="24"/>
+                        <rect key="frame" x="226.5" y="1" width="67.5" height="68"/>
+                        <inset key="imageEdgeInsets" minX="18" minY="5" maxX="18" maxY="28"/>
                         <state key="normal" image="center_paid-checkup"/>
                     </button>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d7A-mf-o4S">
-                        <rect key="frame" x="299" y="6" width="68" height="68"/>
-                        <inset key="imageEdgeInsets" minX="15" minY="0.0" maxX="15" maxY="20"/>
+                        <rect key="frame" x="299" y="1" width="68" height="68"/>
+                        <inset key="imageEdgeInsets" minX="18" minY="5" maxX="18" maxY="26"/>
                         <state key="normal" image="center_finished"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="检查完成" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eSp-WV-12j">
-                        <rect key="frame" x="18" y="53" width="49.5" height="14.5"/>
+                        <rect key="frame" x="18" y="45" width="49.5" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="订单确认" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E5c-bo-YnI">
-                        <rect key="frame" x="90" y="53" width="49.5" height="14.5"/>
+                        <rect key="frame" x="90" y="45" width="49.5" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="施工完成" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Svu-RW-bzj">
-                        <rect key="frame" x="163" y="53" width="49.5" height="14.5"/>
+                        <rect key="frame" x="163" y="45" width="49.5" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已付款" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LnY-ev-2Ye">
-                        <rect key="frame" x="241.5" y="53" width="37" height="14.5"/>
+                        <rect key="frame" x="241.5" y="45" width="37" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已完成" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yUG-rV-lzM">
-                        <rect key="frame" x="314.5" y="53" width="37" height="14.5"/>
+                        <rect key="frame" x="314.5" y="45" width="37" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -127,7 +127,7 @@
                 <outlet property="thirdBtn" destination="9J8-aO-BSg" id="e0Q-le-9w7"/>
                 <outlet property="thirdL" destination="Svu-RW-bzj" id="Gn0-bM-s2L"/>
             </connections>
-            <point key="canvasLocation" x="-727" y="-33"/>
+            <point key="canvasLocation" x="-417.5" y="-123"/>
         </tableViewCell>
     </objects>
     <resources>
