--- a/AutoMall/ViewControllers/Upkeep/AutoCheckResultVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckResultVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -51,7 +51,7 @@
                 <constraint firstItem="o0g-fE-sEl" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="slm-26-1QW"/>
                 <constraint firstAttribute="trailing" secondItem="o0g-fE-sEl" secondAttribute="trailing" id="u9C-ik-869"/>
             </constraints>
-            <point key="canvasLocation" x="-118.5" y="49.5"/>
+            <point key="canvasLocation" x="55" y="60"/>
         </view>
     </objects>
 </document>
